cse11-pa3-starter-main/Open1B.txt
Open1B.java:3: error: variable field1 is already defined in class StatementB
    boolean field1 = true;
            ^
1 error